--- a/brazil-coffee.html
+++ b/brazil-coffee.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <img src="/04/03_Brazil-Coffee/coffee.jpg" alt="brazil-coffee">
+        <img src="coffee.jpg" alt="brazil-coffee">
         <h2>Brazil Coffee</h2>
         <div>$16 per kg</div>
         <button>BUY FROM BRAZIL</button>
